--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <head>
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <link rel="stylesheet" href="main.css">
+            <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
         </head>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Cars4Coders</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed_top">
+            <a class="navbar-brand logo" href="#">Cars_4_Coders</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -14,20 +15,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link nav_font nav_padding" href="/home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link nav_font nav_padding" href="/about.html">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Purchases <span class="sr-only">(current)</span></a>
+                    <a class="nav-link nav_font nav_padding" href="/purchase.html">Purchases <span class="sr-only">(current)</span></a>
                 </li>
             </div>
         </nav>
         <main>
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-xs">
+                <div class="row">
+                    <div class="col-10 offset-1">
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -77,7 +78,7 @@
                         <div class="card">
                             <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
                             <div class="card-body">
-                                <h5 class="card-title">Join Mailing List</h5>
+                                <h5 class="card-title">Join Our Mailing List!</h5>
                                 <p class="card-text">Sign up below to receive news and additional offers from Cars4Coders.</p>
                                 <form>
                                     <div class="form-group">
@@ -94,7 +95,11 @@
                 </div>
             </div>
         </main>
-    </body>   
+    </body>
+    <footer class="fixed_bottom">
+        <div class="py-1">&copy; 2019 Cars_4_Coders.org</div>
+        
+    </footer>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
