--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="card">
                             <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
                             <div class="card-body">
-                                <h5 class="card-title">The Brute Force</h5>
+                                <h5 class="card-title"><em>The Brute Force</em></h5>
                                 <p class="card-text">The <strong>Toyota Land Cruiser</strong> is a series of four-wheel drive vehicles produced by the Japanese automobile manufacturer Toyota. It is Toyota's longest running series of models. As of 2018, the sales of the Land Cruiser totalled more than 6.5 million units worldwide.  Production of the first generation of the Land Cruiser began in 1951 as Toyota's version of a Jeep-like vehicle. The Land Cruiser has been produced in convertible, hardtop, station wagon and cab chassis bodystyles. The Land Cruiser's reliability and longevity has led to huge popularity, especially in Australia where it is the best-selling body-on-frame, four-wheel drive vehicle. Toyota also extensively tests the Land Cruiser in the Australian outback - considered to be one of the toughest operating environments in both temperature and terrain.</p>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
@@ -70,7 +70,7 @@
                         <div class="card">
                             <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
                             <div class="card-body">
-                                <h5 class="card-title">The Elegant Solution</h5>
+                                <h5 class="card-title"><em>The Elegant Solution</em></h5>
                                 <p class="card-text">The <strong>Tesla Model S</strong> is an all-electric five-door liftback car, produced by Tesla, Inc., and introduced on June 22, 2012.  The EPA official range for the 2017 Model S 100D, which is equipped with a 100 kWh (360 MJ) battery pack, is 335 miles (539 km), higher than any other electric car. A distance record of 670 mi (1,080 km) in a P100D was set on August 5, 2017 by Italian drivers, making the Model S the first production electric car to exceed 620 mi (1,000 km) on a single charge.  The Tesla Model S was the top selling plug-in electric car worldwide in 2015 and 2016, and by the end of 2018 continued to rank as the second most-sold electric car in history after the Nissan Leaf. The December 2017 Consumer Reports owner satisfaction survey had the Tesla Model S at the top.</p>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
